# evoq

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BOOTSTRAP-A.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  SETUP-GUIDE.md  SUPPORT.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs-improvement.yml  feature-request.yml
.github/workflows/: ci.yml  daily-report.yml  validate-strategy.yml
alembic/: env.py
alembic/versions/: 20260318_0001_stage2_persistence_kernel.py  20260318_0002_stage3_control_plane_supervisor.py  20260318_0003_stage5_codex_fabric.py  (+15 more)
apps/dashboard-web/: proxy.ts  (+3 more)
docker/: codex-runner.Dockerfile  dashboard.Dockerfile
docs/: QMD_COMMAND_DRIVEN_MEMORY_DAILY_SPEC.md  dashboard_spec_v1_20260318.md  env-params-zh.md  env-params.md  system_restart_handoff_20260318.md  system_restart_runtime_snapshot_redacted_20260318.json
evo/: feature_map.json
memory/: global_remediation_global_auto_recovery_20260225_critic.md  global_remediation_global_auto_recovery_20260225_explorer.md  stream_error_retry_guard_rollout_20260225_explorer.md
ops/: README.md
protocols/: discord-permissions.md  discussion-rules.md  orchestration.md  schedules.md
sample-data/: README.md
scripts/: generate_strategy_validation_bundle.py  run_backtest.py
tests/: conftest.py  test_acquisition.py  test_alpaca_broker.py  test_api_persistence.py  test_codex.py  test_codex_fabric.py  test_control_plane.py  test_dashboard_service.py  test_deploy_config.py  test_deploy_config_runner.py  test_deploy_fields.py  test_discord_access.py  test_doctor.py  test_evolution_capability.py  test_evolution_service.py  test_execution_readiness.py  test_execution_service.py  test_factor_engine.py  test_learning.py  test_market_data_service.py  test_ops_assets.py  test_owner_onboarding.py  test_repo_state.py  test_router.py  test_settings.py  test_skill_catalog.py  test_state_store.py  test_statistical_validation.py  test_strategy_lab.py  test_supervisor.py
(+231 files in other folders)
